--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 <h2><a name="A brief history of Firefox">A brief history of Firefox</a></h2>
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" width="100px"/>
-    <p>The project which became Firefox started as an experimental branch of the <a href="https://www-archive.mozilla.org/products/mozilla1.x/"Mozilla Suite></a> called m/b (or mozilla/browser). After it had been sufficiently developed, binaries for public testing appeared in September 2002 under the name Phoenix.</p>
+    <p>The project which became Firefox started as an experimental branch of the <a href="https://www-archive.mozilla.org/products/mozilla1.x/">Mozilla Suite</a> called m/b (or mozilla/browser). After it had been sufficiently developed, binaries for public testing appeared in September 2002 under the name Phoenix.</p>
   <p>Firefox 23 was released on August 6, 2013. It includes an updated Firefox logo, mixed content blocking enabled by default to defend against man-in-the-middle attacks, implementation of the range form control attribute in HTML5, dropping support for the blink HTML element as well as text-decoration:blink CSS element, the restriction to have to "switch to a different search provider across the entire browser," and a global browser console, a new network monitor among other things. </p>
 
 <h2><a name="A brief history of Chrome">A brief history of Chrome</a></h2>
 <img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" width="100px"/>
-  <p>Google's <a href="https://en.wikipedia.org/wiki/Eric_Schmidt"Eric Schmidt></a> opposed the development of an independent web browser for six years. He stated that "at the time, Google was a small company," and he did not want to go through "bruising browser wars." After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of Chrome, however, Schmidt admitted that "It was so good that it essentially forced me to change my mind."
+  <p>Google's <a href="https://en.wikipedia.org/wiki/Eric_Schmidt">Eric Schmidt</a> opposed the development of an independent web browser for six years. He stated that "at the time, Google was a small company," and he did not want to go through "bruising browser wars." After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of Chrome, however, Schmidt admitted that "It was so good that it essentially forced me to change my mind."
   </p>
   <p>In December 2010 Google announced that to make it easier for businesses to use Chrome they would provide an official Chrome MSI package. For business use it is helpful to have full-fledged MSI packages that can be customized via transform files (.mst) - but the MSI provided with Chrome is only a very limited MSI wrapper fitted around the normal installer, and many businesses find that this arrangement does not meet their needs.</p>
 
